# experiment-polars-for-python

./: .gitignore  README.md  initial_analysis.ipynb  pyproject.toml
